--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-spreadsheet": "3.0.6",
     "graphql-request": "^1.8.2",
     "hubot": "3.3.2",
-    "hubot-irc": "0.4.0"
+    "hubot-irc": "0.4.0",
+    "proxy-agent": "^3.1.1"
   }
 }
