--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,6 @@
       "depTypeList": ["devDependencies"],
       "extends": [":automergeMinor"]
     }
-  ]
+  ],
+  "ignoreDeps": ["coffeescript"]
 }
