Block hubot-irc

--- a/renovate.json
+++ b/renovate.json
@@ -10,5 +10,8 @@
       "extends": [":automergeMinor"]
     }
   ],
-  "ignoreDeps": ["coffeescript"]
+  "ignoreDeps": [
+    "coffeescript",
+    "hubot-irc"
+  ]
 }
