--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,7 +1,7 @@
 name: Pull request notificator
 on:
   schedule:
-    - cron:  '0 10 * * *'
+    - cron:  '0 10 * * 1-5'
 
 jobs:
   pr-notificator:
