Add alerting from grafana

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ MATTERMOST_HOST=chat.canonical.com
 MATTERMOST_GROUP=canonical
 MATTERMOST_USER=webbot
 MATTERMOST_TOKEN=test_token
+GRAFANA_USERNAME=test_username
+GRAFANA_PASSWORD=test_password
