--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "coffeescript": "1.6.3",
     "google-spreadsheet": "3.1.15",
+    "graphql": "^15.5.0",
     "graphql-request": "3.4.0",
     "hubot": "3.3.2",
     "hubot-matteruser": "5.4.1",
