--- a/konf/site.yaml
+++ b/konf/site.yaml
@@ -57,6 +57,10 @@ env:
     secretKeyRef:
       key: hubot-mattermost-token-cmd-dir
       name: irc-secrets
+  - name: MATTERMOST_TOKEN_CMD_TZ
+    secretKeyRef:
+      key: hubot-mattermost-token-cmd-tz
+      name: irc-secrets
   - name: DISCOURSE_WEBHOOK_SECRET
     secretKeyRef:
       key: discourse-webhook-secret
