--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "graphql-request": "3.4.0",
     "hubot": "3.3.2",
     "hubot-matteruser": "5.4.1",
+    "jsdom": "^17.0.0",
+    "node-fetch": "^2.6.1",
     "node-gyp": "7.1.2",
     "proxy-agent": "4.0.1"
   }
