--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start-mattermost": "bin/hubot -a matteruser"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "coffeescript": "1.6.3",
     "google-spreadsheet": "3.1.15",
     "graphql": "^15.5.0",
