Update the cron jobs with actual hubot urls

--- a/.github/workflows/canonicool-reminder-check.yaml
+++ b/.github/workflows/canonicool-reminder-check.yaml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Every time
-        run: curl -X POST localhost:8080/hubot/canonicool-reminders-check
+        run: curl -X POST https://webteam-ircbot.canonical.com/hubot/canonicool-reminders-check
