Add test token in .env

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ MATTERMOST_GROUP=canonical
 MATTERMOST_USER=webbot
 MATTERMOST_TOKEN=test_token
 GRAFANA_USERNAME=test_username
+MATTERMOST_TOKEN_CMD_MEET=test_token
