Use PS5 registry

--- a/konf/site.yaml
+++ b/konf/site.yaml
@@ -1,6 +1,6 @@
 domain: webteam-ircbot.canonical.com
 
-image: prod-comms.docker-registry.canonical.com/webteam-ircbot.canonical.com
+image: prod-comms.ps5.docker-registry.canonical.com/webteam-ircbot.canonical.com
 replicas: 1
 
 readinessPath: false
